<?xml version="1.0"?>
<package format="2">

  <name>geometry_visual_utils</name>
  <version>0.0.0</version>
  <description>lightweight geometry and rviz visualization tools</description>
  <maintainer email="stibipet@fel.cvut.cz">Petr Stibinger</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>sitl_gazebo</depend>
  <depend>protobuf-dev</depend>
  <depend>message_generation</depend> 
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>

</package>
